// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Snapshot Tests Feedback Components ErrorMessage renders correctly 1`] = `
<div>
  <div
    aria-live="assertive"
    class="alert alert-danger"
    role="alert"
  >
    Something went wrong
  </div>
</div>
`;

exports[`Snapshot Tests Feedback Components LoadingSpinner renders correctly 1`] = `
<div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="loading"
    role="status"
  >
    <span
      class="visually-hidden"
    >
      Loading...
    </span>
    Loading...
  </div>
</div>
`;

exports[`Snapshot Tests Feedback Components LoadingSpinner with custom message renders correctly 1`] = `
<div>
  <div
    aria-busy="true"
    aria-live="polite"
    class="loading"
    role="status"
  >
    <span
      class="visually-hidden"
    >
      Please wait...
    </span>
    Please wait...
  </div>
</div>
`;

exports[`Snapshot Tests Feedback Components SuccessMessage renders correctly 1`] = `
<div>
  <div
    aria-live="polite"
    class="alert alert-success"
    role="status"
  >
    Operation completed
  </div>
</div>
`;

exports[`Snapshot Tests Feedback Components WarningBox renders correctly 1`] = `
<div>
  <div
    aria-live="polite"
    role="alert"
    style="padding: 10px; background-color: rgb(255, 243, 205); border: 1px solid rgb(255, 193, 7); border-radius: 2px; margin-bottom: 15px;"
  >
    <strong>
      ⚠️ 
      Warning
      :
    </strong>
     
    This is a warning about process modification
  </div>
</div>
`;

exports[`Snapshot Tests Feedback Components WarningBox with custom title renders correctly 1`] = `
<div>
  <div
    aria-live="polite"
    role="alert"
    style="padding: 10px; background-color: rgb(255, 243, 205); border: 1px solid rgb(255, 193, 7); border-radius: 2px; margin-bottom: 15px;"
  >
    <strong>
      ⚠️ 
      Caution
      :
    </strong>
     
    Be careful with this operation
  </div>
</div>
`;

exports[`Snapshot Tests Form Components FormButton all variants render correctly 1`] = `
<div>
  <div>
    <button
      aria-disabled="false"
      style="padding: 8px 16px; background-color: rgb(73, 80, 87); color: white; border-radius: 2px; cursor: pointer; font-size: 14px; min-width: 90px;"
      type="button"
    >
      Primary
    </button>
    <button
      aria-disabled="false"
      style="padding: 8px 16px; background-color: rgb(108, 117, 125); color: white; border-radius: 2px; cursor: pointer; font-size: 14px; min-width: 90px;"
      type="button"
    >
      Secondary
    </button>
    <button
      aria-disabled="false"
      style="padding: 8px 16px; background-color: rgb(220, 53, 69); color: white; border-radius: 2px; cursor: pointer; font-size: 14px; min-width: 90px;"
      type="button"
    >
      Danger
    </button>
    <button
      aria-disabled="false"
      style="padding: 8px 16px; background-color: rgb(40, 167, 69); color: white; border-radius: 2px; cursor: pointer; font-size: 14px; min-width: 90px;"
      type="button"
    >
      Success
    </button>
  </div>
</div>
`;

exports[`Snapshot Tests Form Components FormButton disabled state renders correctly 1`] = `
<div>
  <button
    aria-disabled="true"
    disabled=""
    style="padding: 8px 16px; background-color: rgb(173, 181, 189); color: white; border-radius: 2px; cursor: not-allowed; font-size: 14px; min-width: 90px;"
    type="button"
  >
    Disabled
  </button>
</div>
`;

exports[`Snapshot Tests Form Components FormButton primary variant renders correctly 1`] = `
<div>
  <button
    aria-disabled="false"
    style="padding: 8px 16px; background-color: rgb(73, 80, 87); color: white; border-radius: 2px; cursor: pointer; font-size: 14px; min-width: 90px;"
    type="button"
  >
    Submit
  </button>
</div>
`;

exports[`Snapshot Tests Form Components SelectField renders correctly 1`] = `
<div>
  <div
    style="margin-bottom: 10px;"
  >
    <label
      for="select-resource"
    >
      Select Resource
      : 
    </label>
    <select
      aria-disabled="false"
      aria-required="false"
      class="form-control"
      id="select-resource"
      name="resource"
      style="width: 400px; display: inline-block; margin-left: 10px;"
    >
      <option
        value="process-instance"
      >
        Process Instance
      </option>
      <option
        value="process-definition"
      >
        Process Definition
      </option>
      <option
        value="task"
      >
        Task
      </option>
    </select>
  </div>
</div>
`;

exports[`Snapshot Tests Form Components SelectField with placeholder renders correctly 1`] = `
<div>
  <div
    style="margin-bottom: 10px;"
  >
    <label
      for="select-type"
    >
      Select Type
      : 
    </label>
    <select
      aria-disabled="false"
      aria-required="false"
      class="form-control"
      id="select-type"
      name="type"
      style="width: 400px; display: inline-block; margin-left: 10px;"
    >
      <option
        value=""
      >
        Choose an option
      </option>
      <option
        value="a"
      >
        Option A
      </option>
    </select>
  </div>
</div>
`;

exports[`Snapshot Tests Navigation Components Pagination last page renders correctly 1`] = `
<div>
  <nav>
    <ul
      class="pagination-sm pagination"
      role="menu"
    >
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          First
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          Previous
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          4
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          5
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          6
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          7
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          8
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          9
        </button>
      </li>
      <li
        class="page-item active "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          10
        </button>
      </li>
      <li
        class="page-item  disabled"
        role="menuitem"
      >
        <button
          class="page-link disabled"
          disabled=""
          style="padding: 4px 8px; cursor: default;"
          type="button"
        >
          Next
        </button>
      </li>
      <li
        class="page-item  disabled"
        role="menuitem"
      >
        <button
          class="page-link disabled"
          disabled=""
          style="padding: 4px 8px; cursor: default;"
          type="button"
        >
          Last
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Snapshot Tests Navigation Components Pagination middle page renders correctly 1`] = `
<div>
  <nav>
    <ul
      class="pagination-sm pagination"
      role="menu"
    >
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          First
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          Previous
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          2
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          3
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          4
        </button>
      </li>
      <li
        class="page-item active "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          5
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          6
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          7
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          8
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          Next
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          Last
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Snapshot Tests Navigation Components Pagination renders correctly 1`] = `
<div>
  <nav>
    <ul
      class="pagination-sm pagination"
      role="menu"
    >
      <li
        class="page-item  disabled"
        role="menuitem"
      >
        <button
          class="page-link disabled"
          disabled=""
          style="padding: 4px 8px; cursor: default;"
          type="button"
        >
          First
        </button>
      </li>
      <li
        class="page-item  disabled"
        role="menuitem"
      >
        <button
          class="page-link disabled"
          disabled=""
          style="padding: 4px 8px; cursor: default;"
          type="button"
        >
          Previous
        </button>
      </li>
      <li
        class="page-item active "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          1
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          2
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          3
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          4
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          5
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          6
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          7
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          Next
        </button>
      </li>
      <li
        class="page-item  "
        role="menuitem"
      >
        <button
          class="page-link "
          style="padding: 4px 8px; cursor: pointer;"
          type="button"
        >
          Last
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Snapshot Tests Navigation Components Tabs renders correctly 1`] = `
<div>
  <div>
    <ul
      class="nav nav-tabs"
      role="tablist"
    >
      <li
        class="nav-item active"
      >
        <a
          aria-selected="true"
          class="nav-link active"
          href="#"
          role="tab"
        >
          Modify
        </a>
      </li>
      <li
        class="nav-item "
      >
        <a
          aria-selected="false"
          class="nav-link "
          href="#"
          role="tab"
        >
          Message
        </a>
      </li>
      <li
        class="nav-item "
      >
        <a
          aria-selected="false"
          class="nav-link "
          href="#"
          role="tab"
        >
          Signal
        </a>
      </li>
    </ul>
    <div
      class="tabs-content-wrapper"
    >
      <div
        class="tab-pane active ctn-tabbed-content ctn-scroll"
        role="tabpanel"
      >
        Modify content
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests Process Components ProcessInfoPanel renders correctly 1`] = `
<div>
  <div
    class="ctn-column"
  >
    <dl
      class="process-information"
    >
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Instance ID:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        instance-123
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Business Key:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        ORDER-2024-001
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Definition Version:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        1
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Definition ID:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <a
          href="#/process-definition/orderProcess:1:abc/runtime"
        >
          orderProcess:1:abc
        </a>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Definition Key:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        orderProcess
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Definition Name:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        Order Process
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Tenant ID:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <code>
          null
        </code>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Deployment ID:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <a
          href="#/repository?deployment=deploy-123&resourceName=order-process.bpmn&deploymentsQuery=%5B%7B%22type%22%3A%22id%22%2C%22operator%22%3A%22eq%22%2C%22value%22%3A%22deploy-123%22%7D%5D"
        >
          deploy-123
        </a>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Super Process instance ID:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <code>
          null
        </code>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          State:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        ACTIVE
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Delete Reason:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <code>
          null
        </code>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Start Time:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <code>
          null
        </code>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          End Time:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <code>
          null
        </code>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Duration:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <code>
          null
        </code>
      </dd>
    </dl>
  </div>
</div>
`;

exports[`Snapshot Tests Process Components ProcessInfoPanel renders the history-only fields of a terminated instance 1`] = `
<div>
  <div
    class="ctn-column"
  >
    <dl
      class="process-information"
    >
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Instance ID:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        instance-789
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Business Key:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        ORDER-2024-002
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Definition Version:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        3
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Definition ID:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <a
          href="#/process-definition/orderProcess:3:ghi/runtime"
        >
          orderProcess:3:ghi
        </a>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Definition Key:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        orderProcess
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Definition Name:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        Order Process
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Tenant ID:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <code>
          null
        </code>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Deployment ID:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <a
          href="#/repository?deployment=deploy-789&resourceName=order-process.bpmn&deploymentsQuery=%5B%7B%22type%22%3A%22id%22%2C%22operator%22%3A%22eq%22%2C%22value%22%3A%22deploy-789%22%7D%5D"
        >
          deploy-789
        </a>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Super Process instance ID:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <code>
          null
        </code>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          State:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        EXTERNALLY_TERMINATED
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Delete Reason:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        Cancelled by operator
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Start Time:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        2024-01-01T10:00:00
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          End Time:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        2024-01-01T11:23:45
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Duration:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        01:23:45.6
      </dd>
    </dl>
  </div>
</div>
`;

exports[`Snapshot Tests Process Components ProcessInfoPanel with null values renders correctly 1`] = `
<div>
  <div
    class="ctn-column"
  >
    <dl
      class="process-information"
    >
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Instance ID:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        instance-456
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Business Key:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <code>
          null
        </code>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Definition Version:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        2
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Definition ID:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <a
          href="#/process-definition/orderProcess:2:def/runtime"
        >
          orderProcess:2:def
        </a>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Definition Key:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        orderProcess
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Definition Name:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        Order Process
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Tenant ID:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        tenant-1
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Deployment ID:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <a
          href="#/repository?deployment=&resourceName=&deploymentsQuery=%5B%7B%22type%22%3A%22id%22%2C%22operator%22%3A%22eq%22%2C%22value%22%3A%22%22%7D%5D"
        />
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Super Process instance ID:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <a
          href="#/history/process-instance/parent-instance-789"
        >
          parent-instance-789
        </a>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          State:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        COMPLETED
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Delete Reason:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <code>
          null
        </code>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Start Time:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <code>
          null
        </code>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          End Time:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <code>
          null
        </code>
      </dd>
      <dt>
        <span
          role="group"
          style="display: flex; align-items: center;"
          tabindex="0"
        >
          Duration:
          <button
            aria-label="Copy to clipboard"
            style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="display: flex;"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
              />
              <path
                d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
              />
            </svg>
          </button>
        </span>
      </dt>
      <dd>
        <code>
          null
        </code>
      </dd>
    </dl>
  </div>
</div>
`;

exports[`Snapshot Tests Table Components AuditLogTable empty state renders correctly 1`] = `
<div>
  <table
    aria-label="Audit log table"
    class="cam-table"
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          aria-sort="none"
          colspan="1"
          role="columnheader"
          style="cursor: pointer;"
          title="Toggle SortBy"
        >
          <span
            class=""
          >
            Activity Name
          </span>
          <a
            style="margin-left: 5px;"
          >
            <svg
              aria-hidden="true"
              baseProfile="tiny"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(21, 92, 181);"
              version="1.2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 11h-12c-1.104 0-2 .896-2 2s.896 2 2 2h12c1.104 0 2-.896 2-2s-.896-2-2-2z"
              />
            </svg>
          </a>
        </th>
        <th
          aria-sort="none"
          colspan="1"
          role="columnheader"
          style="cursor: pointer;"
          title="Toggle SortBy"
        >
          <span
            class=""
          >
            Start Time
          </span>
          <a
            style="margin-left: 5px;"
          >
            <svg
              aria-hidden="true"
              baseProfile="tiny"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(21, 92, 181);"
              version="1.2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 11h-12c-1.104 0-2 .896-2 2s.896 2 2 2h12c1.104 0 2-.896 2-2s-.896-2-2-2z"
              />
            </svg>
          </a>
        </th>
        <th
          aria-sort="none"
          colspan="1"
          role="columnheader"
          style="cursor: pointer;"
          title="Toggle SortBy"
        >
          <span
            class=""
          >
            End Time
          </span>
          <a
            style="margin-left: 5px;"
          >
            <svg
              aria-hidden="true"
              baseProfile="tiny"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(21, 92, 181);"
              version="1.2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 11h-12c-1.104 0-2 .896-2 2s.896 2 2 2h12c1.104 0 2-.896 2-2s-.896-2-2-2z"
              />
            </svg>
          </a>
        </th>
        <th
          aria-sort="none"
          colspan="1"
          role="columnheader"
          style="cursor: pointer;"
          title="Toggle SortBy"
        >
          <span
            class=""
          >
            Duration
          </span>
          <a
            style="margin-left: 5px;"
          >
            <svg
              aria-hidden="true"
              baseProfile="tiny"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(21, 92, 181);"
              version="1.2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 11h-12c-1.104 0-2 .896-2 2s.896 2 2 2h12c1.104 0 2-.896 2-2s-.896-2-2-2z"
              />
            </svg>
          </a>
        </th>
        <th
          aria-sort="none"
          colspan="1"
          role="columnheader"
          style="cursor: pointer;"
          title="Toggle SortBy"
        >
          <span
            class=""
          >
            Type
          </span>
          <a
            style="margin-left: 5px;"
          >
            <svg
              aria-hidden="true"
              baseProfile="tiny"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(21, 92, 181);"
              version="1.2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 11h-12c-1.104 0-2 .896-2 2s.896 2 2 2h12c1.104 0 2-.896 2-2s-.896-2-2-2z"
              />
            </svg>
          </a>
        </th>
        <th
          aria-sort="none"
          colspan="1"
          role="columnheader"
          style="cursor: pointer;"
          title="Toggle SortBy"
        >
          <span
            class=""
          >
            User
          </span>
          <a
            style="margin-left: 5px;"
          >
            <svg
              aria-hidden="true"
              baseProfile="tiny"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(21, 92, 181);"
              version="1.2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 11h-12c-1.104 0-2 .896-2 2s.896 2 2 2h12c1.104 0 2-.896 2-2s-.896-2-2-2z"
              />
            </svg>
          </a>
        </th>
        <th
          aria-sort="none"
          colspan="1"
          role="columnheader"
          style="cursor: pointer;"
          title="Toggle SortBy"
        >
          <span
            class=""
          >
            Canceled
          </span>
          <a
            style="margin-left: 5px;"
          >
            <svg
              aria-hidden="true"
              baseProfile="tiny"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(21, 92, 181);"
              version="1.2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 11h-12c-1.104 0-2 .896-2 2s.896 2 2 2h12c1.104 0 2-.896 2-2s-.896-2-2-2z"
              />
            </svg>
          </a>
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    />
  </table>
</div>
`;

exports[`Snapshot Tests Table Components AuditLogTable with activities renders correctly 1`] = `
<div>
  <table
    aria-label="Audit log table"
    class="cam-table"
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          aria-sort="none"
          colspan="1"
          role="columnheader"
          style="cursor: pointer;"
          title="Toggle SortBy"
        >
          <span
            class=""
          >
            Activity Name
          </span>
          <a
            style="margin-left: 5px;"
          >
            <svg
              aria-hidden="true"
              baseProfile="tiny"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(21, 92, 181);"
              version="1.2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 11h-12c-1.104 0-2 .896-2 2s.896 2 2 2h12c1.104 0 2-.896 2-2s-.896-2-2-2z"
              />
            </svg>
          </a>
        </th>
        <th
          aria-sort="none"
          colspan="1"
          role="columnheader"
          style="cursor: pointer;"
          title="Toggle SortBy"
        >
          <span
            class=""
          >
            Start Time
          </span>
          <a
            style="margin-left: 5px;"
          >
            <svg
              aria-hidden="true"
              baseProfile="tiny"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(21, 92, 181);"
              version="1.2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 11h-12c-1.104 0-2 .896-2 2s.896 2 2 2h12c1.104 0 2-.896 2-2s-.896-2-2-2z"
              />
            </svg>
          </a>
        </th>
        <th
          aria-sort="none"
          colspan="1"
          role="columnheader"
          style="cursor: pointer;"
          title="Toggle SortBy"
        >
          <span
            class=""
          >
            End Time
          </span>
          <a
            style="margin-left: 5px;"
          >
            <svg
              aria-hidden="true"
              baseProfile="tiny"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(21, 92, 181);"
              version="1.2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 11h-12c-1.104 0-2 .896-2 2s.896 2 2 2h12c1.104 0 2-.896 2-2s-.896-2-2-2z"
              />
            </svg>
          </a>
        </th>
        <th
          aria-sort="none"
          colspan="1"
          role="columnheader"
          style="cursor: pointer;"
          title="Toggle SortBy"
        >
          <span
            class=""
          >
            Duration
          </span>
          <a
            style="margin-left: 5px;"
          >
            <svg
              aria-hidden="true"
              baseProfile="tiny"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(21, 92, 181);"
              version="1.2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 11h-12c-1.104 0-2 .896-2 2s.896 2 2 2h12c1.104 0 2-.896 2-2s-.896-2-2-2z"
              />
            </svg>
          </a>
        </th>
        <th
          aria-sort="none"
          colspan="1"
          role="columnheader"
          style="cursor: pointer;"
          title="Toggle SortBy"
        >
          <span
            class=""
          >
            Type
          </span>
          <a
            style="margin-left: 5px;"
          >
            <svg
              aria-hidden="true"
              baseProfile="tiny"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(21, 92, 181);"
              version="1.2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 11h-12c-1.104 0-2 .896-2 2s.896 2 2 2h12c1.104 0 2-.896 2-2s-.896-2-2-2z"
              />
            </svg>
          </a>
        </th>
        <th
          aria-sort="none"
          colspan="1"
          role="columnheader"
          style="cursor: pointer;"
          title="Toggle SortBy"
        >
          <span
            class=""
          >
            User
          </span>
          <a
            style="margin-left: 5px;"
          >
            <svg
              aria-hidden="true"
              baseProfile="tiny"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(21, 92, 181);"
              version="1.2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 11h-12c-1.104 0-2 .896-2 2s.896 2 2 2h12c1.104 0 2-.896 2-2s-.896-2-2-2z"
              />
            </svg>
          </a>
        </th>
        <th
          aria-sort="none"
          colspan="1"
          role="columnheader"
          style="cursor: pointer;"
          title="Toggle SortBy"
        >
          <span
            class=""
          >
            Canceled
          </span>
          <a
            style="margin-left: 5px;"
          >
            <svg
              aria-hidden="true"
              baseProfile="tiny"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              style="color: rgb(21, 92, 181);"
              version="1.2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 11h-12c-1.104 0-2 .896-2 2s.896 2 2 2h12c1.104 0 2-.896 2-2s-.896-2-2-2z"
              />
            </svg>
          </a>
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        role="row"
      >
        <td
          role="cell"
        >
          <span
            role="group"
            style="display: flex; align-items: center;"
            tabindex="0"
          >
            Start
            <button
              aria-label="Copy to clipboard"
              style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="display: flex;"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
                />
                <path
                  d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
                />
              </svg>
            </button>
          </span>
        </td>
        <td
          role="cell"
        >
          <span
            role="group"
            style="display: flex; align-items: center;"
            tabindex="0"
          >
            2024-01-15T10:00:00
            <button
              aria-label="Copy to clipboard"
              style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="display: flex;"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
                />
                <path
                  d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
                />
              </svg>
            </button>
          </span>
        </td>
        <td
          role="cell"
        >
          <span
            role="group"
            style="display: flex; align-items: center;"
            tabindex="0"
          >
            2024-01-15T10:00:01
            <button
              aria-label="Copy to clipboard"
              style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="display: flex;"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
                />
                <path
                  d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
                />
              </svg>
            </button>
          </span>
        </td>
        <td
          role="cell"
        >
          <span
            style="white-space: nowrap;"
          >
            00:00:01.0
          </span>
        </td>
        <td
          role="cell"
        >
          <span
            role="group"
            style="display: flex; align-items: center;"
            tabindex="0"
          >
            startEvent
            <button
              aria-label="Copy to clipboard"
              style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="display: flex;"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
                />
                <path
                  d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
                />
              </svg>
            </button>
          </span>
        </td>
        <td
          role="cell"
        >
          <span
            role="group"
            style="display: flex; align-items: center;"
            tabindex="0"
          >
            <button
              aria-label="Copy to clipboard"
              style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="display: flex;"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
                />
                <path
                  d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
                />
              </svg>
            </button>
          </span>
        </td>
        <td
          role="cell"
        >
          <span
            role="group"
            style="display: flex; align-items: center;"
            tabindex="0"
          >
            false
            <button
              aria-label="Copy to clipboard"
              style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="display: flex;"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
                />
                <path
                  d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
                />
              </svg>
            </button>
          </span>
        </td>
      </tr>
      <tr
        role="row"
      >
        <td
          role="cell"
        >
          <span
            role="group"
            style="display: flex; align-items: center;"
            tabindex="0"
          >
            Review Document
            <button
              aria-label="Copy to clipboard"
              style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="display: flex;"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
                />
                <path
                  d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
                />
              </svg>
            </button>
          </span>
        </td>
        <td
          role="cell"
        >
          <span
            role="group"
            style="display: flex; align-items: center;"
            tabindex="0"
          >
            2024-01-15T10:00:01
            <button
              aria-label="Copy to clipboard"
              style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="display: flex;"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
                />
                <path
                  d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
                />
              </svg>
            </button>
          </span>
        </td>
        <td
          role="cell"
        >
          <span
            role="group"
            style="display: flex; align-items: center;"
            tabindex="0"
          >
            2024-01-15T11:30:00
            <button
              aria-label="Copy to clipboard"
              style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="display: flex;"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
                />
                <path
                  d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
                />
              </svg>
            </button>
          </span>
        </td>
        <td
          role="cell"
        >
          <span
            style="white-space: nowrap;"
          >
            01:29:59.0
          </span>
        </td>
        <td
          role="cell"
        >
          <span
            role="group"
            style="display: flex; align-items: center;"
            tabindex="0"
          >
            userTask
            <button
              aria-label="Copy to clipboard"
              style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="display: flex;"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
                />
                <path
                  d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
                />
              </svg>
            </button>
          </span>
        </td>
        <td
          role="cell"
        >
          <span
            role="group"
            style="display: flex; align-items: center;"
            tabindex="0"
          >
            admin
            <button
              aria-label="Copy to clipboard"
              style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="display: flex;"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
                />
                <path
                  d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
                />
              </svg>
            </button>
          </span>
        </td>
        <td
          role="cell"
        >
          <span
            role="group"
            style="display: flex; align-items: center;"
            tabindex="0"
          >
            false
            <button
              aria-label="Copy to clipboard"
              style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="display: flex;"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
                />
                <path
                  d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
                />
              </svg>
            </button>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Snapshot Tests Utility Components BreadcrumbsPanel legacy props renders correctly 1`] = `
<div>
  <div
    cam-breadcrumbs-panel=""
    class="breadcrumbs-panel"
  >
    <ul
      class="cam-breadcrumb"
    >
      <li>
        <a
          class="text"
          href="#/"
        >
          Dashboard
        </a>
         
      </li>
      <li>
        <span
          class="divider"
        >
          »
        </span>
         
        <a
          class="text"
          href="#/processes/"
        >
          Processes
        </a>
      </li>
      <li>
        <span
          class="divider"
        >
          »
        </span>
         
        <a
          class="text"
          href="#/process-definition/process:1:abc/runtime"
        >
          Order Process
        </a>
      </li>
      <li
        class="active"
      >
        <span
          class="divider"
        >
          »
        </span>
         
        <span
          class="text"
        >
          instance-123
        </span>
         
        <span
          class="divider"
        >
          :
        </span>
         
        History
      </li>
    </ul>
  </div>
</div>
`;

exports[`Snapshot Tests Utility Components BreadcrumbsPanel renders correctly 1`] = `
<div>
  <div
    cam-breadcrumbs-panel=""
    class="breadcrumbs-panel"
  >
    <ul
      class="cam-breadcrumb"
    >
      <li>
        <a
          class="text"
          href="#/"
        >
          Dashboard
        </a>
         
      </li>
      <li>
        <span
          class="divider"
        >
          »
        </span>
         
        <a
          class="text"
          href="#/processes/"
        >
          Processes
        </a>
      </li>
      <li
        class="active"
      >
        <span
          class="divider"
        >
          »
        </span>
         
        <span
          class="text"
        >
          My Process
        </span>
         
        <span
          class="divider"
        >
          :
        </span>
         
        instance-abc : History
      </li>
    </ul>
  </div>
</div>
`;

exports[`Snapshot Tests Utility Components Clippy renders correctly 1`] = `
<div>
  <span
    role="group"
    style="display: flex; align-items: center;"
    tabindex="0"
  >
    Click to copy
    <button
      aria-label="Copy to clipboard"
      style="font-size: 120%; background: none; cursor: pointer; padding: 0px; visibility: hidden;"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        style="display: flex;"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"
        />
        <path
          d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"
        />
      </svg>
    </button>
  </span>
</div>
`;
